--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/rCoderBoostrap/">Home</a>
+              <a class="nav-link " aria-current="page" href="/rCoderBoostrap/">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" aria-current="page" href="/rCoderBoostrap/about.html"
@@ -37,7 +37,7 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="/rCoderBoostrap/contact.html"
+              <a class="nav-link active" aria-current="page" href="/rCoderBoostrap/contact.html"
                 >Contact Us</a
               >
             </li>
