--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
     />
   </head>
   <body>
-  <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
       <div class="container-fluid">
         <a class="navbar-brand" href="/rCoderBoostrap/">rCoder</a>
         <button
@@ -29,15 +29,18 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link " aria-current="page" href="/rCoderBoostrap/">Home</a>
+              <a class="nav-link " aria-current="page" href="/">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="/rCoderBoostrap/about.html"
+              <a class="nav-link " aria-current="page" href="/rCoderBoostrap/about.html"
                 >About</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/rCoderBoostrap/contact.html"
+              <a
+                class="nav-link active"
+                aria-current="page"
+                href="/rCoderBoostrap/contact.html"
                 >Contact Us</a
               >
             </li>
